# gitpod_server_demo

./: .pre-commit-config.yaml  DESCRIPTION.md  pyproject.toml
config/: .env-local
html_templates/: oauth2-redirect.html  swagger.html
src/: main.py
src/actions/: html_generator.py
src/common/: environment.py  health_response_wrapper.py  jinja2_utils.py  periodic.py  string_utils.py  time_utils.py
src/models/: health_doc.py  health_entry.py  health_response.py
src/routers/: health.py  swagger.py
